fix: missing border color of card and change heading level

--- a/blog-preview-card/assets/css/style.css
+++ b/blog-preview-card/assets/css/style.css
@@ -7,7 +7,7 @@
 
 @font-face {
 	font-family: 'Figtree';
-	src: url('assets/fonts/Figtree-VariableFont_wght.ttf');
+	src: url('/assets/fonts/Figtree-VariableFont_wght.ttf');
 	font-weight: 500 800;
 	font-display: swap;
 	font-style: normal;
@@ -32,12 +32,13 @@ p {
 	padding: calc((24 / 16) * 1rem);
 	border-radius: calc((20 / 16) * 1rem);
 	box-shadow: calc((10 / 16) * 1rem) calc((10 / 16) *1rem) var(--gray-950);
+	border: 1px solid var(--gray-950);
 }
 
 img {
 	width: 100%;
 	display: block;
-	border-radius: 1rem;
+	border-radius: calc((10 / 16) * 1rem);
 	margin-bottom: calc((24 / 16) * 1rem);
 }
 
